создание RecycleView с прослушиванием нажатий создание активии транспорт переход  из ресайклер вью

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">AssistantDayr</string>
-    <string name="moto">Мотоцикл</string>
+    <string name="moto">МотоциклMr Bidens new goal includes having 160 million adults fully vaccinated by Independence Day.
+        The target is well within reach as 105 million have already had the required jabs, and the US is vaccinating nearly a million adults per day.
+        But the vaccination rate is half of what it was just three weeks ago.
+        Mr Biden said his administration was working to win over "doubters" about the shots.
+        Israel - a world leader in vaccination rates - has nearly fully reopened its economy and seen its number of new coronavirus cases crash to almost zero, with just over 60% of the population having received at least one shot.
+        Israel may be close to herd immunity to Covid
+        Herd immunity happens when enough of a population has protection against an infection that it stops being able to spread - and even people who don\'t themselves have immunity are indirectly protected.
+        For Covid the estimated thre</string>
 
 
 </resources>
