--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,17 @@
 
 
     <!-- описание транспорта для карточки транспорта -->
-    <string name="telega_discription">Тележка — самое простое устройство для транспортировки грузов. По игровой механике относится к лёгкому транспорту, так как в окне снаряжения занимает слот, предназначенный для него. С тележкой Выживший передвигается так же медленно, как и пешком, однако, может увезти гораздо больший груз.</string>
+    <string name="telega_discription">Тележка — самое простое устройство для транспортировки грузов.
+        По игровой механике относится к лёгкому транспорту, так как в окне снаряжения занимает слот,
+        предназначенный для него. С тележкой Выживший передвигается так же медленно, как и пешком,
+        однако, может увезти гораздо больший груз.</string>
 
     <string name="bicycle_discription">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью,
         однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком.
         Может быть целым, повреждённым и сломанным.</string>
+
+
+
     <string name="motocycle_discription">Мотоцикл — бензиновый транспорт. Обладает малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
     <string name="clasic_mobile_discription">ЗАЗ-968 — средний транспорт, который можно собрать с помощью мастера в Туле на 4 уровне мастерской. В народе его называют «Запорожец».</string>
     <string name="vaz2101_discription">ВАЗ-2101 — средний транспорт, который можно Собрать с помощью мастера в Брянске на 4 уровне мастерской и в Арзамасе на 3 уровне мастерской. В народе его называют «Копейкой».</string>
