--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,57 +1,101 @@
 <resources>
-    <string name="quests">КВЕСТЫ</string>
+    <string name="quests">QUESTS</string>
 
     <!-- названия транспорта для ресайклвью-->
-    <string name="app_name">AssistantDayr</string>
-    <string name="telega">Телега</string>
-    <string name="bicycle">Велосипед</string>
-    <string name="motocycle">Мотоцикл</string>
-    <string name="clasic_mobile">ЗАЗ-968</string>
-    <string name="vaz2101">ВАЗ-2101</string>
-    <string name="gaz24">ГАЗ-24</string>
-    <string name="uaz">УАЗ-469</string>
-    <string name="uaz452">УАЗ-452</string>
-    <string name="gaz66">ГАЗ-66</string>
-    <string name="zil130">ЗИЛ-130</string>
-    <string name="kamaz">Камаз</string>
-    <string name="bav485">БАВ-485</string>
-    <string name="kraz255">КрАЗ-255</string>
-    <string name="mi8">Ми-8</string>
-    <string name="polar_atv">Арктический вездеход</string>
-    <string name="raft">Плот</string>
-    <string name="motorboat">Моторная лодка</string>
-    <string name="belaz">БелАЗ</string>
+    <string name="app_name" translatable="false">AssistantDayr</string>
+    <string name="bicycle">Bicycle</string>
+    <string name="motocycle">Bike</string>
+    <string name="clasic_mobile">ZAZ-968</string>
+    <string name="vaz2101">VAZ-2101</string>
+    <string name="gaz24">GAZ-24</string>
+    <string name="uaz">UAZ-469</string>
+    <string name="uaz452">UAZ-452</string>
+    <string name="gaz66">GAZ-66</string>
+    <string name="zil130">ZIL-130</string>
+    <string name="kamaz">Kamaz</string>
+    <string name="bav485">BAV-485</string>
+    <string name="kraz255">KrAZ-255</string>
+    <string name="mi8">Mi-8</string>
+    <string name="polar_atv">Arctic All-terrain vehicle</string>
+    <string name="raft">Raft</string>
+    <string name="motorboat">Motor boat</string>
+    <string name="belaz">BelAZ</string>
+    <string name="trebuemiy_lvl">Required level</string>
+    <string name="telega">Cart</string>
+    <string name="specifications">SPECIFICATIONS</string>
+    <string name="repair">REPAIR</string>
 
 
     <!-- описание транспорта для карточки транспорта -->
-    <string name="telega_discription">Тележка — самое простое устройство для транспортировки грузов.
+    <!-- телега-->
+    <string name="telega_description" translatable="false">Тележка — самое простое устройство для транспортировки грузов.
         По игровой механике относится к лёгкому транспорту, так как в окне снаряжения занимает слот,
         предназначенный для него. С тележкой Выживший передвигается так же медленно, как и пешком,
-        однако, может увезти гораздо больший груз.</string>
+        однако, может увезти гораздо больший груз. При использовании в роли транспортного средства
+        тележка подвергается износу и может быть отремонтирована. При достижении 0% прочности она
+        ломается и мы получаем 2 части велосипеда. Также тележка может быть использована для сборки
+        велосипеда с тележкой или разобрана на компоненты.</string>
 
-    <string name="bicycle_discription">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью,
+    <string name="telega_metod_polucenia" translatable="false">Купить в поселении под Ленинградом за 125 черных рублей.
+        Найти случайным образом в следующих зданиях: Стройка (любой сектор). Воинская часть (склад)</string>
+
+
+    <!--  велосипед -->
+    <string name="bicycle_description" translatable="false">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью,
         однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком.
-        Может быть целым, повреждённым и сломанным.</string>
+        Может быть целым, повреждённым и сломанным. При использовании в роли транспортного средства
+        велосипед подвергается износу и может быть отремонтирован. При достижении 0% прочности он
+        становится поврежденным. Поврежденный велосипед нельзя использовать по прямому назначению,
+        а также разобрать на запчасти. Поврежденный велосипед можно отремонтировать. Ремонт
+        поврежденного велосипеда не отличается от ремонта целого и ремонтируется на 25% прочности.
+        Целый велосипед может быть использован для сборки велосипеда с тележкой.
+    </string>
+
+    <string name="bicycle_metod_polucenia" translatable="false">Целый велосипед можно собрать самостоятельно,
+        начиная с 10 уровня. Требуется 6 очков исследований. По сценарию целый велосипед можно найти
+        в убежищах возле Мурманска и Беломорска.</string>
+    <string name="bicycle_slomaniy_description" translatable="false">Велосипед — лёгкий транспорт,
+        обладающий минимальной грузоподъёмностью,
+        однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком.
+        Может быть целым, повреждённым и сломанным.
+    </string>
+    <string name="bicycle_metod_polucenia_slomaniy" translatable="false">Сломанный велосипед можно
+        случайным образом найти в следующих зданиях: \n Школа (спортзал). \n Почтовое отделение.
+        \n Уцелевший дом. \n Дорога в городах.</string>
+
+    <string name="bicycle_cart_description" translatable="false">Велосипед с тележкой — лёгкий
+        транспорт, совмещающий в себе скорость велосипеда с грузоподъёмностью тележки.
+    </string>
+    <string name="bicycle_cart_metod_polucenia" translatable="false">Собрать велосипед с тележкой можно
+        самостоятельно, начиная с 20 уровня или у мастера в поселении Олонец, при наличии компонентов для сборки.
+</string>
 
 
-    <string name="motocycle_discription">Мотоцикл — бензиновый транспорт. Обладает малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
-    <string name="clasic_mobile_discription">ЗАЗ-968 — средний транспорт, который можно собрать с помощью мастера в Туле на 4 уровне мастерской. В народе его называют «Запорожец».</string>
-    <string name="vaz2101_discription">ВАЗ-2101 — средний транспорт, который можно Собрать с помощью мастера в Брянске на 4 уровне мастерской и в Арзамасе на 3 уровне мастерской. В народе его называют «Копейкой».</string>
-    <string name="gaz24_discription">ГАЗ-24 — средний транспорт, который можно собрать с помощью мастера в Киеве на 4 уровне мастерской, в Рязани и в Челябинске на 3 уровне мастерской. В народе его называют «Волгой». Также в игре присутствует уникальная Чёрная волга, которая по сути является транспортом той же модели, но имеет ряд отличий от данного автомобиля.</string>
-    <string name="uaz_discription">УАЗ-469 — средний транспорт, который можно собрать с помощью мастера в Ижевске и в Кургане на 3 уровне мастерской. В народе его называют «Уазик».</string>
-    <string name="uaz452_discription">УАЗ-452 — средний транспорт, который можно собрать с помощью мастера в Ростове-на-Дону на 3 уровне мастерской и в Новосибирске на 2 уровне мастерской. Обладает самой высокой грузоподъёмностью и самым большим расходом топлива среди бензинового транспорта. В народе его называют «Буханкой» или «Таблеткой».</string>
-    <string name="gaz66_discription">ГАЗ-66 — транспорт, который можно собрать с помощью мастера в Свердловске и в Красноярске на 3 уровне мастерской или купить в магазине за 2000 крышек. В народе его называют «Шишига» или «Шишка».</string>
-    <string name="zil130_discription">ЗИЛ-130 — тяжёлый транспорт, который можно собрать с помощью мастера в Магнитогорске на 3 уровне мастерской. Хорошо подходит для снабжения базы тяжёлыми ресурсами</string>
-    <string name="kamaz_discription">Камаз — тяжёлый транспорт, который можно собрать с помощью мастера в Омске на 3 уровне мастерской. Один из тех, который нельзя поднять в разобранном или сломанном виде. Хорошо подходит для снабжения базы тяжёлыми ресурсами</string>
-    <string name="bav485_discription">БАВ-485 (Большой Автомобиль Водоплавающий) — тяжёлый транспорт, который можно собрать самостоятельно. Автомобиль может плавать. Не подвержен износу.</string>
-    <string name="kraz255_discription">КрАЗ-255 — тяжёлый транспорт, который можно собрать с помощью мастера в Тюмени на 4 уровне мастерской или купить в магазине за 4000 крышек. Обладает отличной проходимостью и грузоподъёмностью, а также самым большим расходом топлива в игре. Хорошо подходит для снабжения базы тяжёлыми ресурсами</string>
-    <string name="mi8_discription">Ми-8 — тяжёлый транспортный вертолет, который можно собрать у мастера в Воронеже. Обладает самой высокой проходимостью и подвижностью. Не подвержен износу.</string>
-    <string name="polar_atv_discription">Арктический вездеход — Уникальный Новогодний транспорт в игре Day R. Плавает и преодолевает любую местность с одинаковой скоростью. Не требует ремонта.</string>
-    <string name="raft_discription">Моторная лодка — водный транспорт в игре Day R.</string>
-    <string name="motorboat_discription">Самодельный плот — водный транспорт, который можно собрать самостоятельно. Позволяет передвигаться по воде и по болоту. Не подвержен износу. Также самодельный плот является компонентом для создания плота с мотором.</string>
-    <string name="belaz_discription">БелАЗ — уникальный транспорт, единственным способом получить который является прохождение квеста «Город на колесах». Обладает самой высокой грузоподъёмностью в игре и не требует топлива. В народе его называют «Белка».</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+
+    <string name="motocycle_description" translatable="false">Мотоцикл — бензиновый транспорт. Обладает малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
+    <string name="clasic_mobile_description" translatable="false">ЗАЗ-968 — средний транспорт, который можно собрать с помощью мастера в Туле на 4 уровне мастерской. В народе его называют «Запорожец».</string>
+    <string name="vaz2101_description" translatable="false">ВАЗ-2101 — средний транспорт, который можно Собрать с помощью мастера в Брянске на 4 уровне мастерской и в Арзамасе на 3 уровне мастерской. В народе его называют «Копейкой».</string>
+    <string name="gaz24_description" translatable="false">ГАЗ-24 — средний транспорт, который можно собрать с помощью мастера в Киеве на 4 уровне мастерской, в Рязани и в Челябинске на 3 уровне мастерской. В народе его называют «Волгой». Также в игре присутствует уникальная Чёрная волга, которая по сути является транспортом той же модели, но имеет ряд отличий от данного автомобиля.</string>
+    <string name="uaz_description" translatable="false">УАЗ-469 — средний транспорт, который можно собрать с помощью мастера в Ижевске и в Кургане на 3 уровне мастерской. В народе его называют «Уазик».</string>
+    <string name="uaz452_description" translatable="false">УАЗ-452 — средний транспорт, который можно собрать с помощью мастера в Ростове-на-Дону на 3 уровне мастерской и в Новосибирске на 2 уровне мастерской. Обладает самой высокой грузоподъёмностью и самым большим расходом топлива среди бензинового транспорта. В народе его называют «Буханкой» или «Таблеткой».</string>
+    <string name="gaz66_description" translatable="false">ГАЗ-66 — транспорт, который можно собрать с помощью мастера в Свердловске и в Красноярске на 3 уровне мастерской или купить в магазине за 2000 крышек. В народе его называют «Шишига» или «Шишка».</string>
+    <string name="zil130_description" translatable="false">ЗИЛ-130 — тяжёлый транспорт, который можно собрать с помощью мастера в Магнитогорске на 3 уровне мастерской. Хорошо подходит для снабжения базы тяжёлыми ресурсами</string>
+    <string name="kamaz_description" translatable="false">Камаз — тяжёлый транспорт, который можно собрать с помощью мастера в Омске на 3 уровне мастерской. Один из тех, который нельзя поднять в разобранном или сломанном виде. Хорошо подходит для снабжения базы тяжёлыми ресурсами</string>
+    <string name="bav485_description" translatable="false">БАВ-485 (Большой Автомобиль Водоплавающий) — тяжёлый транспорт, который можно собрать самостоятельно. Автомобиль может плавать. Не подвержен износу.</string>
+    <string name="kraz255_description" translatable="false">КрАЗ-255 — тяжёлый транспорт, который можно собрать с помощью мастера в Тюмени на 4 уровне мастерской или купить в магазине за 4000 крышек. Обладает отличной проходимостью и грузоподъёмностью, а также самым большим расходом топлива в игре. Хорошо подходит для снабжения базы тяжёлыми ресурсами</string>
+    <string name="mi8_description" translatable="false">Ми-8 — тяжёлый транспортный вертолет, который можно собрать у мастера в Воронеже. Обладает самой высокой проходимостью и подвижностью. Не подвержен износу.</string>
+    <string name="polar_atv_description" translatable="false">Арктический вездеход — Уникальный Новогодний транспорт в игре Day R. Плавает и преодолевает любую местность с одинаковой скоростью. Не требует ремонта.</string>
+    <string name="raft_description" translatable="false">Моторная лодка — водный транспорт в игре Day R.</string>
+    <string name="motorboat_description" translatable="false">Самодельный плот — водный транспорт, который можно собрать самостоятельно. Позволяет передвигаться по воде и по болоту. Не подвержен износу. Также самодельный плот является компонентом для создания плота с мотором.</string>
+    <string name="belaz_description" translatable="false">БелАЗ — уникальный транспорт, единственным способом получить который является прохождение квеста «Город на колесах». Обладает самой высокой грузоподъёмностью в игре и не требует топлива. В народе его называют «Белка».</string>
+    <string name="yes">YES</string>
+    <string name="instrument">Instrument</string>
+    <string name="screw">Screw</string>
+    <string name="engine_oil">Engine oil</string>
+    <string name="assemble">ASSEMBLE</string>
+    <string name="production_method">PRODUCTION METHOD</string>
 
 
 </resources>
