--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,9 +23,31 @@
     <string name="specifications">ХАРАКТЕРИСТИКИ</string>
     <string name="repair">РЕМОНТ</string>
     <string name="yes">ДА</string>
-    <string name="instrument">Инструмент</string>
+    <string name="instrument">Набор инструментов</string>
     <string name="screw">Винт</string>
     <string name="engine_oil">Машинное масло</string>
     <string name="assemble">СБОРКА</string>
     <string name="production_method">СПОСОБ ПОЛУЧЕНИЯ</string>
+    <string name="bicycle_cart">Велосипед с тележкой</string>
+    <string name="load_capacity">Грузоподъемность</string>
+
+
+    <string name="telega_description">Тележка — самое простое устройство для транспортировки грузов.
+        По игровой механике относится к лёгкому транспорту, так как в окне снаряжения занимает слот,
+        предназначенный для него. С тележкой Выживший передвигается так же медленно, как и пешком,
+        однако, может увезти гораздо больший груз. При использовании в роли транспортного средства
+        тележка подвергается износу и может быть отремонтирована. При достижении 0% прочности она
+        ломается и мы получаем 2 части велосипеда. Также тележка может быть использована для сборки
+        велосипеда с тележкой или разобрана на компоненты.</string>
+    <string name="weight">Вес</string>
+    <string name="max_mileage">Макс.пробег</string>
+    <string name="max_speed">Макс.скорость</string>
+    <string name="kmh_9">9км/ч</string>
+    <string name="kg_35">35кг</string>
+    <string name="kg_70">70кг</string>
+    <string name="km_1000">1000км</string>
+    <string name="pcs_1">1шт</string>
+    <string name="no">НЕТ</string>
+    <string name="experience">Получаемый опыт</string>
+
 </resources>
