--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,15 +30,6 @@
     <string name="production_method">СПОСОБ ПОЛУЧЕНИЯ</string>
     <string name="bicycle_cart">Велосипед с тележкой</string>
     <string name="load_capacity">Грузоподъемность</string>
-
-
-    <string name="telega_description">Тележка — самое простое устройство для транспортировки грузов.
-        По игровой механике относится к лёгкому транспорту, так как в окне снаряжения занимает слот,
-        предназначенный для него. С тележкой Выживший передвигается так же медленно, как и пешком,
-        однако, может увезти гораздо больший груз. При использовании в роли транспортного средства
-        тележка подвергается износу и может быть отремонтирована. При достижении 0% прочности она
-        ломается и мы получаем 2 части велосипеда. Также тележка может быть использована для сборки
-        велосипеда с тележкой или разобрана на компоненты.</string>
     <string name="weight">Вес</string>
     <string name="max_mileage">Макс.пробег</string>
     <string name="max_speed">Макс.скорость</string>
@@ -49,5 +40,32 @@
     <string name="pcs_1">1шт</string>
     <string name="no">НЕТ</string>
     <string name="experience">Получаемый опыт</string>
+    <string name="bicycle_parts">Части велосипеда</string>
+    <string name="glue_duc">Клей или изолента</string>
+    <string name="pcs_3">3шт</string>
+    <string name="lvl_20">20ур</string>
+    <string name="lvl_10">10ур</string>
+    <string name="final_result">Итоговый результат</string>
+    <string name="pcs_2">2шт</string>
+    <string name="gr_40">40гр</string>
+    <string name="wire">Проволока</string>
+    <string name="motorized_cart">Мототележка</string>
+
+
+    <string name="telega_description">Тележка — самое простое устройство для транспортировки грузов.
+        По игровой механике относится к лёгкому транспорту, так как в окне снаряжения занимает слот,
+        предназначенный для него. С тележкой Выживший передвигается так же медленно, как и пешком,
+        однако, может увезти гораздо больший груз. При использовании в роли транспортного средства
+        тележка подвергается износу и может быть отремонтирована. При достижении 0% прочности она
+        ломается и мы получаем 2 части велосипеда. Также тележка может быть использована для сборки
+        велосипеда с тележкой или разобрана на компоненты.</string>
+    <string name="kg_50">50кг</string>
+    <string name="kg_120">120кг</string>
+    <string name="km_3000">3000км</string>
+    <string name="kmh_20">20км/ч</string>
+    <string name="pcs_5">5шт</string>
+    <string name="lvl_30">30ур</string>
+    <string name="gr_30">30гр</string>
+
 
 </resources>
