--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,8 @@
         случайным образом найти в следующих зданиях: \n- Школа (спортзал). \n- Почтовое отделение.
         \n- Уцелевший дом. \n- Дорога в городах.</string>
 
+
+    <!-- велосипед с тележкой-->
     <string name="bicycle_cart_description" translatable="false">Велосипед с тележкой — лёгкий
         транспорт, совмещающий в себе скорость велосипеда с грузоподъёмностью тележки.
     </string>
@@ -99,13 +101,33 @@
         самостоятельно, начиная с 20 уровня или у мастера в поселении Олонец, при наличии компонентов для сборки.
     </string>
 
-    <string name="motorized_cart_description" translatable="false">Мототележка — первый наземный бензиновый транспорт, доступный игроку, является модификацией велосипеда с тележкой. Обладает наименьшим расходом топлива среди среднего транспорта, но низкой скоростью и малой грузоподъёмностью. Бывает целая и сломанная.
-    </string>
-    <string name="motorized_cart_metod_polucenia" translatable="false">Единственным способом получения мототележки является самостоятельная сборка, начиная с 30 уровня; схема открывается за 6 очков исследований.</string>
 
+    <!--мототележка-->
+    <string name="motorized_cart_description" translatable="false">Мототележка — первый наземный
+        бензиновый транспорт, доступный игроку, является модификацией велосипеда с тележкой. Обладает
+        наименьшим расходом топлива среди среднего транспорта, но низкой скоростью и малой грузоподъёмностью.
+        Бывает целая и сломанная. В отличие от большинства транспорта, целую мототележку нельзя разобрать
+        или разломать на металлолом, а после поломки нельзя починить. Без топлива персонаж фактически
+        несёт мототележку на себе, как и весь остальной транспорт, который обладает малым весом. \n- С v.708
+        можно использовать в квесте ""Просьба матери"".</string>
 
+    <string name="motorized_cart_metod_polucenia" translatable="false">Единственным способом получения мототележки является
+        самостоятельная сборка, начиная с 30 уровня; схема открывается за 6 очков исследований.</string>
+
+    <string name="motorized_cart_slomanaya" translatable="false">Сломанную мототележку нельзя починить,
+        можно только разобрать на запчасти.</string>
+
+    <string name="motorized_cart_slomanaya_metod_polucenia" translatable="false">Из рабочей мототележки.</string>
+
+    <!--мотоцикл-->
     <string name="motocycle_description" translatable="false">Мотоцикл — бензиновый транспорт. Обладает малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
+
+
+    <!--ЗАЗ-->
     <string name="clasic_mobile_description" translatable="false">ЗАЗ-968 — средний транспорт, который можно собрать с помощью мастера в Туле на 4 уровне мастерской. В народе его называют «Запорожец».</string>
+
+
+
     <string name="vaz2101_description" translatable="false">ВАЗ-2101 — средний транспорт, который можно Собрать с помощью мастера в Брянске на 4 уровне мастерской и в Арзамасе на 3 уровне мастерской. В народе его называют «Копейкой».</string>
     <string name="gaz24_description" translatable="false">ГАЗ-24 — средний транспорт, который можно собрать с помощью мастера в Киеве на 4 уровне мастерской, в Рязани и в Челябинске на 3 уровне мастерской. В народе его называют «Волгой». Также в игре присутствует уникальная Чёрная волга, которая по сути является транспортом той же модели, но имеет ряд отличий от данного автомобиля.</string>
     <string name="uaz_description" translatable="false">УАЗ-469 — средний транспорт, который можно собрать с помощью мастера в Ижевске и в Кургане на 3 уровне мастерской. В народе его называют «Уазик».</string>
@@ -130,6 +152,9 @@
     <string name="lvl_30">30lvl</string>
     <string name="gr_30">30gr</string>
     <string name="xp_850" translatable="false">850xp</string>
+    <string name="kg_0">0kg</string>
+    <string name="km_0">0km</string>
+    <string name="kmh_0">0km/h</string>
 
 
 </resources>
